Update process configurations for trading strategies
- Replace existing arbitrage commands with specific trade system commands
- Update MEXC and KuCoin arbitrage strategy configurations
- Modify config.yaml to use trade-system-v2 executable for running strategies

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,6 @@
-'mexc-arbitrage':
-    command: 'ls'
+'mexc-derrick-arb':
+    command: 'cd /home/ubuntu/trade-system-v2 && ./target/release/trade-system-v2 mexc_spot_triarb'
     interval: 10
-'binance-arbitrage':
-    command: 'python binance_arbitrage.py'
+'kucoin-cde-arb':
+    command: 'cd /home/ubuntu/trade-system-v2 && ./target/release/trade-system-v2 kucoin_spot_triarb'
     interval: 10
-
